# silero_vad_cpp

./: CMakeLists.txt  LICENSE  README.md  example.cpp
include/silero_vad/: vad.hpp
src/: silero_vad.cpp
